fix border for to be visible if bg is white

--- a/src/components/CategoryIcons/CategoryIcons.scss
+++ b/src/components/CategoryIcons/CategoryIcons.scss
@@ -18,7 +18,7 @@
             border-radius: 10px;
             max-width: 100%;
             margin: 0 auto;
-            border: 1px solid rgba(255, 255, 255, 0.2);
+            border: 1px solid rgba(0, 0, 0, 0.2);
             padding: 15px;
             box-sizing: border-box;
         }
